@@ -275,3 +275,4 @@ Issue #2019345 by johnv: Updated workfow_rules to reflect latest code. Still onl
 Issue #2019345 by johnv: Changed constructor of Workflow to be protected.
 Issue #2102193 by johnv: Changed call to 'hook_workflow', 'transition permitted' - arguments were swapped.
 Issue #2019345 by johnv: Fixed 'force' parameter in call to hook_workflow.
+Issue #2019345 by johnv: Added some love to the Workflow Form: less space for schedule block.
